gke/cluster/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    role: backend
  ports:
    - port: 9090
