gke/cluster/prometheus/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - prometheus.lawrjone.xyz
      secretName: prometheus-lawrjone-xyz
  rules:
    - host: prometheus.lawrjone.xyz
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
